// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioInput /> should render a radio input with a component as the label 1`] = `
<div
  className="radioInput"
>
  <Input
    isButton={false}
    isDisabled={false}
    label={
      <FontAwesomeIcon
        type="star"
      />
    }
    name="test-jsx-input"
    type="radio"
  />
  <label
    className="radio"
    htmlFor="test-jsx-input"
  >
    <FontAwesomeIcon
      type="star"
    />
  </label>
</div>
`;

exports[`<RadioInput /> should render a radio input with button 1`] = `
<div
  className="radioInput"
>
  <Input
    isButton={true}
    isDisabled={false}
    label="Hey I am a test string"
    name="test-button-input"
    type="radio"
  />
  <label
    className="radio radio-button"
    htmlFor="test-button-input"
  >
    Hey I am a test string
  </label>
</div>
`;

exports[`<RadioInput /> should render a radio input without button 1`] = `
<div
  className="radioInput"
>
  <Input
    isButton={false}
    isDisabled={false}
    label="Hey I am a test string"
    name="test-input"
    type="radio"
  />
  <label
    className="radio"
    htmlFor="test-input"
  >
    Hey I am a test string
  </label>
</div>
`;
